tests/build/fail/unit.rs
use ref_destruct::*;

#[ref_destruct(MyStructRef)]
struct MyStruct;

fn main() {}